--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form action="#">
             <div class="amount">
                 <p>Enter Amount</p>
-                <input type="number" value="1">
+                <input type="text" value="0" inputmode="decimal">
             </div>
             <div class="drop-list">
                 <div class="from">
