--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <form action="#">
             <div class="amount">
                 <p>Enter Amount</p>
-                <input type="text" value="" inputmode="decimal">
+                <input type="text" inputmode="decimal">
+        <p id="output"></p>
             </div>
             <div class="drop-list">
                 <div class="from">
