--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="from">
                     <p>From</p>
                     <div class="select-box">
-                        <img src="https://flagsapi.com/TR/shiny/64.png" alt="flag">
+                        <img src="https://flagsapi.com/US/shiny/64.png" alt="flag">
                         <select></select>
                     </div>
                 </div>
